# attendx

./: .env.example  .env.school  .gitignore  CONTRIBUTING.md  LICENSE  README.md  all-prompts.md
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 32bb83b9a7c2_add_parent_id_to_categories.py  9064db9409c9_initial_schema.py  9de0e2d33632_remove_phone_from_students.py  a0dac80a0bcd_add_access_groups.py  a1b2c3d4e5f6_replace_events_with_timetable_accessgroup.py  b3f1a2c4d5e6_add_categories.py  c96404ca462e_remove_is_active_from_categories.py  f1a2b3c4d5e6_replace_access_groups_with_events.py  g2b3c4d5e6f7_add_picture_url_to_attendance.py  h3c4d5e6f7a8_add_last_polled_at_to_devices.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: health.py
backend/app/core/: api_key_manager.py  csrf.py  data_masking.py  database.py  dependencies.py  error_codes.py  exceptions.py  logging.py  metrics.py  permissions.py  rate_limit.py  rate_limiter.py  redis.py  security.py  security_headers.py  sentry_config.py  validation.py
backend/app/models/: __init__.py  access_group.py  api_key.py  attendance.py  audit_log.py  base.py  category.py  device.py  student.py  telegram_sub.py  timetable.py  user.py  webhook.py  webhook_log.py
backend/app/repositories/: __init__.py  access_group_repo.py  attendance_repo.py  base.py  device_repo.py  student_repo.py  timetable_repo.py
backend/app/schemas/: __init__.py  access_group.py  attendance.py  (+8 more)
backend/bot/: admin_alerts.py  helpers.py  keyboards.py  main.py  states.py  templates.py  utils.py
backend/scripts/: backup.py  restore.py  seed.py  verify_deployment.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_students.py
backend/worker/: main.py
(+170 files in other folders)
