[tool.poetry]
name = "attendx-backend"
version = "1.0.0"
description = "AttendX — Face Recognition Attendance Platform (Backend)"
authors = ["AttendX Team"]
packages = [{include = "app"}, {include = "worker"}, {include = "bot"}, {include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.31.0"
alembic = "^1.14.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.18"
redis = "^5.0.0"
cryptography = "^44.0.0"
python-telegram-bot = "^21.0"
httpx = "^0.28.0"
structlog = "^24.0.0"
tenacity = "^9.0.0"
bcrypt = "^5.0.0"
openpyxl = "^3.1.0"
slowapi = "^0.1.9"
reportlab = "^4.0.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}
prometheus-fastapi-instrumentator = {version = "^7.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
black = "^24.0.0"
ruff = "^0.9.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
aiosqlite = "^0.22.1"
fakeredis = {extras = ["aioredis"], version = "^2.0.0"}
pytest-httpx = "^0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
